# Nanuak-Dictionary

./: Build.ps1  BuildAndRun.ps1  Cargo.toml  Dockerfile  FreeUpSpace.ps1  Run.ps1
project builder/: 01-Create-Prompt.ps1  02-Call-Model.ps1  Cargo.toml  bruh.prompt  response.md
project builder/src/: get_description.rs  main.rs
project description/: README.md
src/: main.rs
v001/: README.md
v001-runner/: Cargo.toml
v001-runner/src/: main.rs
v002-lister/: Cargo.toml
v002-lister/src/: main.rs
v003-create-new-version/: Cargo.toml  next steps.md
v003-create-new-version/src/: main.rs
v004-create-new-version/: Cargo.toml
v004-create-new-version/src/: main.rs
v005-create-new-version/: Cargo.toml
v005-create-new-version/src/: main.rs
v006-create-new-version/: Cargo.toml  next steps.md
v006-create-new-version/src/: lib.rs  main.rs
v007-create-new-version/: Cargo.toml  Run.ps1
v007-create-new-version/src/: lib.rs
v008-launch-create-new-version/: Cargo.toml
v009-dictionary/: Cargo.toml
v010-dictionary/: AfterCreate.ps1  Cargo.toml
v011-recovery-state/: Cargo.toml
v011-recovery-state/src/: main.rs
v012-recovery-state/: Cargo.toml
v012-recovery-state/src/: main.rs
v013-recovery-state/: Cargo.toml
v015-recovery-state/: Cargo.toml
v019-recovery-state/: Cargo.toml
v019-recovery-state/src/: main.rs
v020-recovery-state/: Cargo.toml
v021-recovery-state/: Cargo.toml
v022-recovery-state/: Cargo.toml
v023-recovery-state/: Cargo.toml
v024-recovery-state/: Cargo.toml
v025-dictionary/: Cargo.toml
v025-dictionary/src/: create_new_version_state.rs  define_word_state.rs  lib.rs  main.rs  state.rs
v026-dictionary/: Cargo.toml
v026-dictionary/src/: create_new_version_state.rs  define_word_state.rs  main.rs  state.rs
v029-dictionary/src/: create_new_version_state.rs  define_word_state.rs
v030-dictionary/: Cargo.toml
v030-dictionary/src/: lib.rs  main.rs  state.rs
v031-dictionary/: Cargo.toml
v032-dictionary/: Cargo.toml
v032-dictionary/src/: create_new_version_state.rs  main.rs
v033-dictionary/: Cargo.toml
v033-dictionary/src/: create_new_version_state.rs  lib.rs  main.rs
v034-dictionary/: AfterCreate.ps1  Cargo.toml  Run.ps1
v034-dictionary/src/: main.rs
v035-dictionary/: Cargo.toml
v035-dictionary/src/: main.rs
v036-dictionary-docker/: Cargo.toml
v036-dictionary-docker/src/: create_new_version_state.rs  main.rs
