[package]
name = "v006-create-new-version"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
color-eyre = "0.6.3"
dialoguer = "0.11.0"
eyre = "0.6.12"
ollama-rs = "0.2.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
