[package]
name = "v009-dictionary"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
color-eyre = "0.6.3"
dialoguer = "0.11.0"
eyre = "0.6.12"
ollama-rs = "0.2.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
v006-create-new-version = { path = "../v006-create-new-version" }
v007-create-new-version = { path = "../v007-create-new-version" }
