[package]
name = "v025-dictionary"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
serde_json = "1.0.138"
dialoguer = "0.11.0"
ollama-rs = "0.2.5"
async-recursion = "1.1.1"
tracing = "0.1.41"
toml = "0.8.20"
eyre = "0.6.12"
strum = { version = "0.27.1", features = ["derive"] }

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.v007-create-new-version]
path = "../v007-create-new-version"

[dependencies.v006-create-new-version]
path = "../v006-create-new-version"

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["fmt", "env-filter"]
