[package]
name = "v026-dictionary"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
toml = "0.8.20"
eyre = "0.6.12"
serde_json = "1.0.138"
async-recursion = "1.1.1"
ollama-rs = "0.2.5"
color-eyre = "0.6.3"
tracing = "0.1.41"

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.v007-create-new-version]
path = "../v007-create-new-version"

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["fmt", "env-filter"]

[dependencies.strum]
version = "0.27.1"
features = ["derive"]

[dependencies.v006-create-new-version]
path = "../v006-create-new-version"
