[package]
name = "v034-dictionary"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = "0.2.5"
serde_json = "1.0.138"
eyre = "0.6.12"
color-eyre = "0.6.3"
async-trait = "0.1.86"
async-recursion = "1.1.1"
tracing = "0.1.41"
itertools = "0.14.0"
toml = "0.8.20"
dialoguer = "0.11.0"

[dependencies.strum]
version = "0.27.1"
features = ["derive"]

[dependencies.v006-create-new-version]
path = "../v006-create-new-version"

[dependencies.v007-create-new-version]
path = "../v007-create-new-version"

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["fmt", "env-filter"]

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.cloud_terrastodon_core_user_input]
git = "https://github.com/aafc-cloud/Cloud-Terrastodon/"
rev = "5ea41e5fa70a8f0e83119bec846c28d49859be6a"
